change trigger branch for test

--- a/.github/workflows/publish-image.yaml
+++ b/.github/workflows/publish-image.yaml
@@ -2,7 +2,7 @@ name: 'build image and push to ghcr.io'
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "main", "feature/deploy-to-ghcr" ]
 
 jobs:
   build:
